Project ecommerce {
  database_type: "PostgreSQL"
}

Table users {
  user_id int [pk, increment]
  name varchar
  email varchar [unique]
  password_hash varchar
  role varchar
  created_at timestamp
}

Table categories {
  category_id int [pk, increment]
  name varchar
  description text
}

Table products {
  product_id int [pk, increment]
  category_id int [ref: > categories.category_id]
  name varchar
  description text
  price decimal
  stock_quantity int
  image_url varchar
  created_at timestamp
}

Table cart {
  cart_id int [pk, increment]
  user_id int [ref: > users.user_id]
  created_at timestamp
}

Table cart_items {
  cart_item_id int [pk, increment]
  cart_id int [ref: > cart.cart_id]
  product_id int [ref: > products.product_id]
  quantity int
}

Table orders {
  order_id int [pk, increment]
  user_id int [ref: > users.user_id]
  status varchar
  total_amount decimal
  created_at timestamp
}

Table order_items {
  order_item_id int [pk, increment]
  order_id int [ref: > orders.order_id]
  product_id int [ref: > products.product_id]
  quantity int
  price decimal
}

Table payments {
  payment_id int [pk, increment]
  order_id int [ref: > orders.order_id]
  amount decimal
  method varchar
  status varchar
  paid_at timestamp
}

Table reviews {
  review_id int [pk, increment]
  user_id int [ref: > users.user_id]
  product_id int [ref: > products.product_id]
  rating int
  comment text
  created_at timestamp
}
